--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -70,7 +70,7 @@ canvas {
     display: flex;
     justify-content: center;
     text-shadow: 0px 0px 0.1em rgb(7, 42, 155);
-    padding: 0.75rem;
+    padding: 0.5rem;
     background: var(--NavBackground);
     position: fixed;
     z-index: 1000;
@@ -80,8 +80,7 @@ canvas {
 }
 
 .navItem {
-    padding: 0.5rem;
-    padding-bottom: 0.5rem;
+    padding: 1rem;
     margin-inline: auto;
     margin-top: none;
     margin-bottom: none;
@@ -143,7 +142,7 @@ canvas {
         left: 100%;
         height: 3rem;
         border-radius: 50%;
-        border: 2px solid rgba(0, 0, 0, 0.6);
+        border: 2px solid rgba(19, 19, 33, 0.8);
         transform: translate(-100%, -50%);
         transition: 0.3s;
     }
@@ -199,19 +198,65 @@ canvas {
 }
 
 .mediaSection {
-    display: grid;
-    grid-template-columns: auto 1fr auto;
-    height: 100vh;
-    padding: 1rem;
+    display: flex;
+    //grid-template-columns: auto 1fr auto;
+    height: 100%;
+    width: fit-content;
+    padding: 0.5rem;
     overflow-y: auto;
+    gap: 3rem;
+    justify-content: center;
 }
 
 .mSecMedia {
     flex-grow: 1;
+    padding: 0.75rem;
+    img {
+        position: relative;
+        top: 50%;
+        left: 100%;
+        height: 100%    ;
+        border-radius: 50%;
+        border: 2px solid rgba(19, 19, 33, 0.8);
+        transform: translate(-100%, -50%);
+    }
+}
+
+.aboutTile {
+    padding: 1rem;
+    height: 18rem;
+    width: 50rem;
+    z-index: -2;
+    background: rgba(205, 205, 226, 0.75);
+    margin-inline: auto;
+    border-radius: 1rem;
+    color: black;
+    text-align: left;
+}
+
+.mSecHeader {
+    padding-top: 1rem;
+    margin: 0;
+    font-size: 1.5rem;
+    line-height: normal;
 }
 
 .mSecContent {
-    flex-grow: 2;
+    flex-grow: 3;
+    display: flex;
+    flex-direction: column
+}
+
+.mSecText {
+
+}
+
+.mSecFooter {
+    margin-top: auto;
+    padding: 0em;
+    display: flex;
+    margin-left: -1rem;
+    justify-content: flex-start;
 }
 
 #footerContainer {
@@ -258,5 +303,73 @@ canvas {
         align-items: center;
         margin: 0 0.25em;
         font-weight: bold;
+    }
+}
+
+//SVG Icons
+.aboutFooterIcon {
+    height: 3rem;
+    width: 3rem;
+    margin-inline: 1rem;
+    background-repeat: no-repeat;
+    background-size: cover; 
+    background-color: rgba(134, 134, 151, 0.76);;
+    border-radius: 99rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: 1px solid rgba(15, 18, 49, 0.271);
+}
+.github-icon {
+    svg {
+        height: 60%;
+        width: 60%;
+
+        path {
+            fill: rgba(0, 0, 0, 0.75);
+            transition-timing-function: cubic-bezier(.2,0,.4,1);
+            transition-duration: .25s;
+        }
+    }
+    svg:hover {
+        path {
+            fill: rgba(72, 0, 98, 0.9);
+        }
+    }
+}
+
+.linkedin-icon {
+    svg {
+        height: 55%;
+        width: 55%;
+
+        path {
+            fill: rgba(0, 0, 0, 0.75);
+            transition-timing-function: cubic-bezier(.2,0,.4,1);
+            transition-duration: .25s;
+        }
+    }
+    svg:hover {
+        path {
+            fill: rgba(0, 115, 177, 0.8)
+        }
+    }
+}
+
+.mail-icon {
+    svg {
+        height: 80%;
+        width: 80%;
+
+        path {
+            fill: rgba(0, 0, 0, 0.75);
+            transition-timing-function: cubic-bezier(.2,0,.4,1);
+            transition-duration: .25s;
+        }
+    }
+    svg:hover {
+        path {
+            fill: rgb(42, 87, 43)
+        }
     }
 }
