--- a/main.css
+++ b/main.css
@@ -133,7 +133,7 @@ canvas {
   left: 100%;
   height: 3rem;
   border-radius: 50%;
-  border: 2px solid rgba(0, 0, 0, 0.6);
+  border: 2px solid rgba(19, 19, 33, 0.8);
   transform: translate(-100%, -50%);
   transition: 0.3s;
 }
@@ -185,19 +185,61 @@ canvas {
 }
 
 .mediaSection {
-  display: grid;
-  grid-template-columns: auto 1fr auto;
-  height: 100vh;
-  padding: 1rem;
+  display: flex;
+  height: 100%;
+  width: -moz-fit-content;
+  width: fit-content;
+  padding: 0.5rem;
   overflow-y: auto;
+  gap: 3rem;
+  justify-content: center;
 }
 
 .mSecMedia {
   flex-grow: 1;
+  padding: 0.75rem;
+}
+.mSecMedia img {
+  position: relative;
+  top: 50%;
+  left: 100%;
+  height: 100%;
+  border-radius: 50%;
+  border: 2px solid rgba(19, 19, 33, 0.8);
+  transform: translate(-100%, -50%);
+}
+
+.aboutTile {
+  padding: 1rem;
+  height: 18rem;
+  width: 50rem;
+  z-index: -2;
+  background: rgba(205, 205, 226, 0.75);
+  margin-inline: auto;
+  border-radius: 1rem;
+  color: black;
+  text-align: left;
+}
+
+.mSecHeader {
+  padding-top: 1rem;
+  margin: 0;
+  font-size: 1.5rem;
+  line-height: normal;
 }
 
 .mSecContent {
-  flex-grow: 2;
+  flex-grow: 3;
+  display: flex;
+  flex-direction: column;
+}
+
+.mSecFooter {
+  margin-top: auto;
+  padding: 0em;
+  display: flex;
+  margin-left: -1rem;
+  justify-content: flex-start;
 }
 
 #footerContainer {
@@ -240,6 +282,59 @@ canvas {
   align-items: center;
   margin: 0 0.25em;
   font-weight: bold;
+}
+
+.aboutFooterIcon {
+  height: 3rem;
+  width: 3rem;
+  margin-inline: 1rem;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-color: rgba(134, 134, 151, 0.76);
+  border-radius: 99rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: 1px solid rgba(15, 18, 49, 0.271);
+}
+
+.github-icon svg {
+  height: 60%;
+  width: 60%;
+}
+.github-icon svg path {
+  fill: rgba(0, 0, 0, 0.75);
+  transition-timing-function: cubic-bezier(0.2, 0, 0.4, 1);
+  transition-duration: 0.25s;
+}
+.github-icon svg:hover path {
+  fill: rgba(72, 0, 98, 0.9);
+}
+
+.linkedin-icon svg {
+  height: 55%;
+  width: 55%;
+}
+.linkedin-icon svg path {
+  fill: rgba(0, 0, 0, 0.75);
+  transition-timing-function: cubic-bezier(0.2, 0, 0.4, 1);
+  transition-duration: 0.25s;
+}
+.linkedin-icon svg:hover path {
+  fill: rgba(0, 115, 177, 0.8);
+}
+
+.mail-icon svg {
+  height: 80%;
+  width: 80%;
+}
+.mail-icon svg path {
+  fill: rgba(0, 0, 0, 0.75);
+  transition-timing-function: cubic-bezier(0.2, 0, 0.4, 1);
+  transition-duration: 0.25s;
+}
+.mail-icon svg:hover path {
+  fill: rgb(42, 87, 43);
 }/*# sourceMappingURL=index.css.map */
 
 /*# sourceMappingURL=main.css.map*/
