--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -238,6 +238,8 @@ canvas {
     border-radius: 1rem;
     color: black;
     text-align: left;
+    //margin-bottom: 10%;
+    translate: 0 -20%;
 }
 
 @keyframes fadeInUp {
